tests/type_errors/length_on_record.nos
# expect_error: no method length
type Point = { x: Int, y: Int }
main() = Point(1, 2).length()
